Finish data retrieval and fix design

--- a/src/locale/ar.json
+++ b/src/locale/ar.json
@@ -1,3 +1,7 @@
 {
-  "title": "شركة الفا للتنظيفات"
+  "title": "شركة ألفا للتنظيفات",
+  "aboutUs": {
+    "title": "مرحبًا بكم في شركة ألفا للتنظيف، حيث النظافة هي شغفنا ورضاكم هو أولويتنا.",
+    "subTitle": "باعتبارنا شركة رائدة في مجال خدمات التنظيف، نحن متخصصون في تحويل المساحات إلى ملاذات نظيفة. بفضل فريقنا المتفاني وحلول التنظيف المتميزة."
+  }
 }
