--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -1,3 +1,7 @@
 {
-  "title": "Alpha Cleaning"
+  "title": "Alpha Cleaning Company",
+  "aboutUs": {
+    "title": "Welcome to Alpha Cleaning, where cleanliness is our passion and your satisfaction is our priority.",
+    "subTitle": "As a leading cleaning services company, we specialize in transforming spaces into immaculate havens. With our dedicated team and top-notch cleaning solutions, we deliver excellence, one clean at a time"
+  }
 }
