before change the home page

--- a/src/locale/ar.json
+++ b/src/locale/ar.json
@@ -3,5 +3,13 @@
   "aboutUs": {
     "title": "مرحبًا بكم في شركة ألفا للتنظيف، حيث النظافة هي شغفنا ورضاكم هو أولويتنا.",
     "subTitle": "باعتبارنا شركة رائدة في مجال خدمات التنظيف، نحن متخصصون في تحويل المساحات إلى ملاذات نظيفة. بفضل فريقنا المتفاني وحلول التنظيف المتميزة."
+  },
+  "offers": {
+    "title": "أضف الخدمة التي تحتاجها إلى سلة التسوق واطلبها الآن!",
+    "addToCart": "إضافة الى السلة ",
+    "removeFromCart": "إزالة من السلة"
+  },
+  "cart": {
+    "yourCart": "سلة الطلبات"
   }
 }
