--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -3,5 +3,13 @@
   "aboutUs": {
     "title": "Welcome to Alpha Cleaning, where cleanliness is our passion and your satisfaction is our priority.",
     "subTitle": "As a leading cleaning services company, we specialize in transforming spaces into immaculate havens. With our dedicated team and top-notch cleaning solutions, we deliver excellence, one clean at a time"
+  },
+  "offers": {
+    "title": "Add the service you need to the cart and order them now !",
+    "addToCart": "Add To Cart",
+    "removeFromCart": "Reome From Cart"
+  },
+  "cart": {
+    "yourCart": "Orders Cart"
   }
 }
