edit design and resposive

--- a/src/locale/ar.json
+++ b/src/locale/ar.json
@@ -1,8 +1,9 @@
 {
-  "title": "شركة ألفا للتنظيفات",
+  "title": "شركة ألفا للخدمات",
   "aboutUs": {
     "title": "مرحبًا بكم في شركة ألفا للتنظيف، حيث النظافة هي شغفنا ورضاكم هو أولويتنا.",
-    "subTitle": "باعتبارنا شركة رائدة في مجال خدمات التنظيف، نحن متخصصون في تحويل المساحات إلى ملاذات نظيفة. بفضل فريقنا المتفاني وحلول التنظيف المتميزة."
+    "subTitle": "باعتبارنا شركة رائدة في مجال خدمات التنظيف، نحن متخصصون في تحويل المساحات إلى ملاذات نظيفة. بفضل فريقنا المتفاني وحلول التنظيف المتميزة.",
+    "ourServices": "الإنتقال إالى الخدمات"
   },
   "offers": {
     "title": "أضف الخدمة التي تحتاجها إلى سلة التسوق واطلبها الآن!",
@@ -10,6 +11,7 @@
     "removeFromCart": "إزالة من السلة"
   },
   "cart": {
-    "yourCart": "سلة الطلبات"
+    "yourCart": "سلة الطلبات",
+    "empty": "سلة الطلبات فارغة"
   }
 }
