before add messaging and payment

--- a/src/locale/ar.json
+++ b/src/locale/ar.json
@@ -1,9 +1,9 @@
 {
-  "title": "شركة ألفا للخدمات",
+  "title": "شركة ألفا لخدمات التنظيف",
   "aboutUs": {
     "title": "مرحبًا بكم في شركة ألفا للتنظيف، حيث النظافة هي شغفنا ورضاكم هو أولويتنا.",
     "subTitle": "باعتبارنا شركة رائدة في مجال خدمات التنظيف، نحن متخصصون في تحويل المساحات إلى ملاذات نظيفة. بفضل فريقنا المتفاني وحلول التنظيف المتميزة.",
-    "ourServices": "الإنتقال إالى الخدمات"
+    "ourServices": "الإنتقال إلى الخدمات"
   },
   "offers": {
     "title": "أضف الخدمة التي تحتاجها إلى سلة التسوق واطلبها الآن!",
@@ -12,6 +12,11 @@
   },
   "cart": {
     "yourCart": "سلة الطلبات",
-    "empty": "سلة الطلبات فارغة"
+    "empty": "سلة الطلبات فارغة",
+    "remove": "حذف",
+    "cancel": "إلغاء",
+    "order": "طلب",
+    "close": "إغلاق",
+    "confirm": "موافق"
   }
 }
