edit form checkout and add speed dial

--- a/src/locale/ar.json
+++ b/src/locale/ar.json
@@ -18,5 +18,11 @@
     "order": "طلب",
     "close": "إغلاق",
     "confirm": "موافق"
+  },
+  "checkoutForm": {
+    "name": "الاسم",
+    "phone": "رقم الجوال",
+    "city": "المدينة",
+    "address": "العنوان"
   }
 }
