add messages for payments

--- a/src/locale/ar.json
+++ b/src/locale/ar.json
@@ -17,12 +17,29 @@
     "cancel": "إلغاء",
     "order": "طلب",
     "close": "إغلاق",
-    "confirm": "موافق"
+    "confirm": "موافق",
+    "title": "سلة الطلبات"
   },
   "checkoutForm": {
-    "name": "الاسم",
-    "phone": "رقم الجوال",
+    "firstname": "الاسم الأول",
+    "lastname": "الاسم الأخير",
+    "email": "البريد الإلكتروني",
+    "address": "العنوان",
     "city": "المدينة",
-    "address": "العنوان"
+    "phone": "رقم الجوال",
+    "currency": "العملة",
+    "amount": "المبلغ",
+    "errorMessages": {
+      "firstname": "الرجاء إدخال قيمة صحيحة للاسم الأول",
+      "lastname": "الرجاء إدخال قيمة صحيحة للاسم الأول",
+      "email": "الرجاء إدخال قيمة صحيحة للإيميل ",
+      "address": "الرجاء إدخال قيمة صحيحة لعنوانك",
+      "city": "الرجاء إدخال قيمة صحيحة  للمدينة",
+      "phone": "الرجاء إدخال قيمة صحيحة لرقم الجوال",
+      "amount": "الرجاء إدخال قيمة صحيحة للمبلغ"
+    }
+  },
+  "payment": {
+    "title": "الدفع"
   }
 }
