add sms to cart

--- a/src/locale/ar.json
+++ b/src/locale/ar.json
@@ -37,7 +37,10 @@
       "city": "الرجاء إدخال قيمة صحيحة  للمدينة",
       "phone": "الرجاء إدخال قيمة صحيحة لرقم الجوال",
       "amount": "الرجاء إدخال قيمة صحيحة للمبلغ"
-    }
+    },
+    "sendingOrder": "جاري إرسال الطلب .. ",
+    "errorSendingOrder": "حدث خطأ في إرسال طلبك الرجاء المحاولة مرة أخرى",
+    "successOrder": "تم إرسال طلبك بنجاح،سيقوم فريقنا بالتواصل معك في أقرب فرصة ممكنة.."
   },
   "payment": {
     "title": "الدفع"
