add payment result

--- a/src/locale/ar.json
+++ b/src/locale/ar.json
@@ -1,5 +1,5 @@
 {
-  "title": "شركة ألفا لخدمات التنظيف",
+  "title": " ألفا لخدمات التنظيف",
   "aboutUs": {
     "title": "مرحبًا بكم في شركة ألفا للتنظيف، حيث النظافة هي شغفنا ورضاكم هو أولويتنا.",
     "subTitle": "باعتبارنا شركة رائدة في مجال خدمات التنظيف، نحن متخصصون في تحويل المساحات إلى ملاذات نظيفة. بفضل فريقنا المتفاني وحلول التنظيف المتميزة.",
@@ -40,7 +40,8 @@
     },
     "sendingOrder": "جاري إرسال الطلب .. ",
     "errorSendingOrder": "حدث خطأ في إرسال طلبك الرجاء المحاولة مرة أخرى",
-    "successOrder": "تم إرسال طلبك بنجاح،سيقوم فريقنا بالتواصل معك في أقرب فرصة ممكنة.."
+    "successOrder": "تم إرسال طلبك بنجاح،سيقوم فريقنا بالتواصل معك في أقرب فرصة ممكنة..",
+    "successPayment": "تمت عملية الدفع بنجاح! شكراً لتعاملكم مع شركة ألفا .."
   },
   "payment": {
     "title": "الدفع"
