Fix form resposiveness

--- a/src/locale/ar.json
+++ b/src/locale/ar.json
@@ -11,7 +11,7 @@
     "removeFromCart": "إزالة من السلة"
   },
   "cart": {
-    "yourCart": "سلة الطلبات",
+    "yourCart": "الطلبات",
     "empty": "سلة الطلبات فارغة",
     "remove": "حذف",
     "cancel": "إلغاء",
@@ -29,6 +29,9 @@
     "phone": "رقم الجوال",
     "currency": "العملة",
     "amount": "المبلغ",
+    "ILS": "شيكل",
+    "USD": "دولار",
+    "JOD": "دينار",
     "errorMessages": {
       "firstname": "الرجاء إدخال قيمة صحيحة للاسم الأول",
       "lastname": "الرجاء إدخال قيمة صحيحة للاسم الأول",
