--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -44,7 +44,7 @@
     "sendingOrder": "Request is being sent",
     "errorSendingOrder": "An error occurred sending your request, please try again",
     "successOrder": "Your request has been sent successfully, we will contact you as soon as possible.",
-    "successPayment": "Your Payment is recieved.."
+    "successPayment": "Your Payment has recieved.."
   },
   "payment": {
     "title": "Payment"
