--- a/src/locale/ar.json
+++ b/src/locale/ar.json
@@ -61,5 +61,9 @@
     "paidVia": "طريقة الدفع: ",
     "paidViaValue": "Debit/Credit Card",
     "note": "يرجى أخذ لقطة للفاتورة والاحتفاظ بها."
+  },
+  "footer": {
+    "text": "نحن نقدر خصوصيتك، حيث يقوم هذا الموقع بجمع الحد الأدنى من المعلومات الشخصية فقط لغرض تقديم خدماتنا. نحن لا نشارك أو نبيع بياناتك لأطراف ثالثة. لمزيد من التفاصيل، يرجى الرجوع إلى موقعنا الكامل ",
+    "hyperLink": "سياسة الخوصوصية والإرجاع"
   }
 }
