--- a/src/locale/ar.json
+++ b/src/locale/ar.json
@@ -64,6 +64,6 @@
   },
   "footer": {
     "text": "نحن نقدر خصوصيتك، حيث يقوم هذا الموقع بجمع الحد الأدنى من المعلومات الشخصية فقط لغرض تقديم خدماتنا. نحن لا نشارك أو نبيع بياناتك لأطراف ثالثة. لمزيد من التفاصيل، يرجى الرجوع إلى موقعنا الكامل ",
-    "hyperLink": "سياسة الخوصوصية والإرجاع"
+    "hyberLink": "سياسة الخوصوصية والإرجاع"
   }
 }
